--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<h2><font color="#E07B4D">About Me</font></h2></li>
 		Hi, I am Shivam Shekhar Soy, often going by SamIsTheFBI on the internet. I am a 19 year old guy from India who loves to tinker around with anything he gets his hands on, most especially computers and software. Apart from the obvious signs that I like anime-styled art, I also love playing games, jumping from one genre to the other.
 	<h2><font color="#E07B4D">Purpose of this page</font></h2>
-		I am sort of in the middle of finding that as well. I just happened to stumble upon this website that allows you free hosting. And applying all that high school HTML knowledge seemed like a good idea to me. Nothing to lose so here we are. Also, there is a possibility that I may refine this page and make it some sort of a portfolio website.
+		I am sort of in the middle of finding that as well. I just happened to stumble upon this feature. And applying all that high school HTML knowledge seemed like a good idea to me. Nothing to lose so here we are. Also, there is a possibility that I may refine this page and make it some sort of a portfolio website.
 	</p>
 	<br>
 	<hr color="#E9D9B0" width="60%">
