--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body bgcolor="#292823" link="#E07B4D" vlink="#E07B4D">
 	<font color="#E9D9B0" size="4.5em">
 	<header align="center">
-		<h1> Welcome to the basic website of <font color = "#E07B4D">SamIsTheFBI</font></h1>
+		<h1> Welcome to <font color = "#E07B4D">SamIsTheFBI's</font> basic website</h1>
 		<hr color="#E9D9B0" width="60%"><br>
 		<a href="https://www.pixiv.net/artworks/39419085"><img src="https://cdn.donmai.us/sample/e8/bf/__hakurei_reimu_kirisame_marisa_remilia_scarlet_cirno_rumia_and_8_more_touhou_and_1_more_drawn_by_eho_icbm__sample-e8bf7469bc42d1e9f44462a132b9d9dc.jpg" border="2px" width="25%"/></a>
 		<a href="https://www.pixiv.net/artworks/60732070"><img src="https://cdn.donmai.us/sample/b1/aa/__original_drawn_by_yasumo_kuusouorbital__sample-b1aacb4ea9c62bcc1e8aa3087008efc8.jpg" border="2px" width="25%"/></a>
