--- a/index.html
+++ b/index.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-		<title>Sam's Basic Website </title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./css/style.css">
+	<title>SamIsTheFBI | Web Developer</title>
 </head>
 <body>
 	<header>
-		<h1>Hello I'm <highlight>SamIsTheFBI</highlight></h1>
-  </header>
-	
-	<div class="socials">
-		<a href="https://github.com/SamIsTheFBI/"><i class="devicon-github-original"></i></a>
-	</div>
-
-	<div class="container">
-		<div class="item item-1">
-			<h2><highlight>About Me</highlight></h2>
-				<p class="about-me">
-				Hi, I am Shivam Shekhar Soy, often going by SamIsTheFBI on the internet. I am a 19 year old guy from India who loves to tinker around with computers and software.
+		<div class="hero">
+			<div class="hero-content">
+				<nav class="primary-nav">
+					<div class="logo">
+						<a href="#"><strong>SamIsTheFBI</strong></a>
+					</div>
+					<ul class="nav-items">
+						<li><a href="#">About</a></li>
+						<li><a href="#">Projects</a></li>
+						<li><a href="#">Blog</a></li>
+					</ul>
+				</nav>
+				<h1>Hi, I'm <highlight>Shivam</highlight>.</h1>
+				<p>Frontend web developer based in India.</p>
+				<p id="socials">
+					<a href="https://www.linkedin.com/in/samisthefbi" target="_blank">LinkedIn</a>
+					<a href="https://www.twitter.com/samisthefbi" target="_blank">Twitter</a>
+					<a href="https://www.github.com/samisthefbi" target="_blank">GitHub</a>
+					<a href="mailto:shivamshekharsoy@gmail.com" target="_blank">Gmail</a>
 				</p>
+			</div>
 		</div>
-		<div class="item item-2">
-			<h2><highlight>Tech I Use</highlight></h2>
-				<p class="tech-i-use">
-				<i class="devicon-github-original"></i>
-				<i class="devicon-c-plain"></i>
-				<i class="devicon-cplusplus-plain"></i>
-				<i class="devicon-bash-plain"></i>
-				</p>
-		</div>
-	</div>
-	
+	</header>
 </body>
 </html>
