--- a/404.html
+++ b/404.html
@@ -12,6 +12,12 @@
 			flex-flow: column;
 			align-items: center;
 			justify-content: center;
+			text-align: center;
+		}
+
+		img {
+			max-width: 480px;
+			width: 75%;
 		}
 
 		hr {
@@ -33,8 +39,8 @@
 	<h1>404</h1>
 	<p><strong>Page not found.</strong></p>
 	<hr>
-	<img src="./assets/404-misato.jpg" width="480px"/>
+	<img src="./assets/404-misato.jpg"/>
 	<hr>
-	<p>Or maybe something else? Check <a href="https://githubstatus.com/">GitHub Status</a></p>
+	<p>Or maybe something else?<br/>Check <a href="https://githubstatus.com/">GitHub Status</a></p>
 </body>
 </html>
