🚀 Feature Update: Responsive 404 page (1)

--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
 			align-items: center;
 			justify-content: center;
 			text-align: center;
+			overflow-x: hidden;
 		}
 
 		img {
@@ -21,7 +22,8 @@
 		}
 
 		hr {
-			width: 400px;
+			max-width: 400px;
+			width: 70%;
 			color: #404;
 		}
 
