--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <body>
 	<header>
 		<div class="hero">
+				<video autoplay muted loop id="hero-video">
+					<source src="./assets/misato-walk.mp4" type="video/mp4">
+				</video>
 			<div class="hero-content">
 				<nav class="primary-nav">
 					<div class="logo">
