--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<header>
 		<div class="hero">
-				<video autoplay muted loop id="hero-video">
+				<video playsinline autoplay muted loop autobuffer preload="auto" id="hero-video">
 					<source src="./assets/misato-walk.mp4" type="video/mp4">
 				</video>
 			<div class="hero-content">
