🚀 Feature update: Using a different video for hero section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
 
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<header>
 		<div class="hero">
 				<video playsinline autoplay muted loop autobuffer preload="auto" id="hero-video">
-					<source src="./assets/misato-walk.mp4" type="video/mp4">
+					<source src="./assets/eva-shots.mp4" type="video/mp4">
 				</video>
 			<div class="hero-content">
 				<nav class="primary-nav">
