🚀 Feature update: Added links to some cool websites

--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
 		<p>Art, Drawing, Music, Movies, Linux, Evangelion, Retro games.</p>
 	</section>
 	<footer>
-		Copyright &copy; 2023 Shivam Shekhar Soy. All Rights Reserved.
+		<nav>
+			<a href="http://fauux.neocities.org/"><img src="./assets/buttons/fauux-btn-01.gif" alt="button"></a>
+			<a href="http://wiby.me/"><img src="./assets/buttons//iby.gif" alt="button"></a>
+		</nav>
+		<div class="copyright">
+			Copyright &copy; 2023 Shivam Shekhar Soy. All Rights Reserved.
+		</div>
 	</footer>
 </body>
 </html>
