🚀 Feature update: Fixed typo, removed hero video, now using image

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
 
-	<!-- <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<header>
 		<div class="hero">
-				<video playsinline autoplay muted loop autobuffer preload="auto" id="hero-video">
-					<source src="./assets/eva-shots.mp4" type="video/mp4">
-				</video>
+				<img src="./assets/kiki-screencap.jpg" />
 			<div class="hero-content">
 				<nav class="primary-nav">
 					<div class="logo">
@@ -96,7 +94,7 @@
 	<footer>
 		<nav>
 			<a href="http://fauux.neocities.org/"><img src="./assets/buttons/fauux-btn-01.gif" alt="button"></a>
-			<a href="http://wiby.me/"><img src="./assets/buttons//iby.gif" alt="button"></a>
+			<a href="http://wiby.me/"><img src="./assets/buttons/wiby.gif" alt="button"></a>
 		</nav>
 		<div class="copyright">
 			Copyright &copy; 2023 Shivam Shekhar Soy. All Rights Reserved.
