--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png" />
 
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<header>
 		<div class="hero">
-				<img src="./assets/kiki-screencap.jpg" />
+				<img src="./assets/kiki-screencap.webp" alt="kiki's delivery service screencap as hero section image" width="100%" height="100%"/>
 			<div class="hero-content">
 				<nav class="primary-nav">
 					<div class="logo">
@@ -51,12 +50,6 @@
 		<p>Hi! I'm a 20 year old CS student from India with a passion for computers and software. Currently, I am in the process of learning <highlight>full stack web development</highlight> so that I can create robust web sites.</p><br />
 		<p>My real name is <highlight>Shivam Shekhar Soy</highlight> but on the internet I'm <highlight>SamIsTheFBI</highlight>.</p><br />
 		<p>I have been programming for <highlight>2 years</highlight> now, excluding the <a href="https://scratch.mit.edu/">Scratch</a> & HTML basics they taught us in schools. I have explored the field of coding but found my interest in web development. </p>
-		<p id="socials">
-			<a href="https://www.linkedin.com/in/samisthefbi" target="_blank">LinkedIn</a>
-			<a href="https://www.twitter.com/samisthefbi" target="_blank">Twitter</a>
-			<a href="https://www.github.com/samisthefbi" target="_blank">GitHub</a>
-			<a href="mailto:shivamshekharsoy@gmail.com" target="_blank">Gmail</a>
-		</p>
 	</section>
 	<section id="techstack">
 		<h2>My current tech stack</h2>
