🚀 Feature update: Changed navbar positioning on smaller devices, flex on hero contents

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<header>
 		<div class="hero">
-				<img src="./assets/kiki-screencap.webp" alt="kiki's delivery service screencap as hero section image" width="100%" height="100%"/>
+				<img src="./assets/kiki-screencap.webp" alt="kiki's delivery service screencap" width="100%" height="100%"/>
 			<div class="hero-content">
 				<nav class="primary-nav">
 					<div class="logo">
@@ -31,7 +31,7 @@
 					<ul class="nav-items">
 						<li><a href="#about">About</a></li>
 						<li><a href="/projects">Projects</a></li>
-						<li><a href="/projects">Blog</a></li>
+						<li><a href="/projects">Extras</a></li>
 					</ul>
 				</nav>
 				<h1>Hi, I'm <highlight>Shivam</highlight>.</h1>
@@ -86,8 +86,8 @@
 	</section>
 	<footer>
 		<nav>
-			<a href="http://fauux.neocities.org/"><img src="./assets/buttons/fauux-btn-01.gif" alt="button"></a>
-			<a href="http://wiby.me/"><img src="./assets/buttons/wiby.gif" alt="button"></a>
+			<a href="http://fauux.neocities.org/"><img src="./assets/buttons/fauux-btn-01.gif" alt="button" width="100%" height="100%"></a>
+			<a href="http://wiby.me/"><img src="./assets/buttons/wiby.gif" alt="button" width="100%" height="100%"></a>
 		</nav>
 		<div class="copyright">
 			Copyright &copy; 2023 Shivam Shekhar Soy. All Rights Reserved.
