--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</nav>
 				<h1>Hi, I'm <highlight>Shivam</highlight>.</h1>
 				<p>Frontend web developer based in India.</p>
-				<p id="socials">
+				<p id="hero-socials">
 					<a href="https://www.linkedin.com/in/samisthefbi" target="_blank">LinkedIn</a>
 					<a href="https://www.twitter.com/samisthefbi" target="_blank">Twitter</a>
 					<a href="https://www.github.com/samisthefbi" target="_blank">GitHub</a>
@@ -81,7 +81,7 @@
 		</ul>
 	</section>
 	<section id="things-i-love">
-		<h2>Things I ❤️&nbsp;</h2>
+		<h2>Things I ❤️</h2>
 		<p>Art, Drawing, Music, Movies, Linux, Evangelion, Retro games.</p>
 	</section>
 	<footer>
