--- a/404.html
+++ b/404.html
@@ -40,6 +40,7 @@
 <body>
 	<h1>404</h1>
 	<p><strong>Page not found.</strong></p>
+	<p>I may or may not be creating a page for that</p>
 	<hr>
 	<img src="./assets/404-misato.jpg"/>
 	<hr>
